--- a/index.html
+++ b/index.html
@@ -2,14 +2,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SNX Code Quiz</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="css/snx.css" />
 </head>
 
+<body>
+    <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+        <div class="w3-display-topleft w3-padding-large w3-small">
+            <strong>VIEWS HIGH SCORES</strong>
+        </div>
+        <div class="w3-display-middle">
+            <h1 class="w3-jumbo w3-animate-top">SNX</h1>
+            <p><strong>Superior Nutrition Quiz</strong></p>
+            <hr class="w3-border-grey" style="margin:auto;width:40%">
+            <p class="w3-large w3-center">www.SuperiorNutritionX.com</p>
+        </div>
+        <div class="w3-display-bottomleft w3-padding-small">
+            <a href="https://theprogresslab.com" target="_blank">Presented by<br>TheProgressLab.com<br> World Wide
+                Training. Personal Results.</a>
+        </div>
+    </div>
 
+</body>
 
 </html>
