--- a/index.html
+++ b/index.html
@@ -17,10 +17,24 @@
         </div>
         <div class="w3-display-middle">
             <h1 class="w3-jumbo w3-animate-top">SNX</h1>
-            <p><strong>Superior Nutrition Quiz</strong></p>
-            <hr class="w3-border-grey" style="margin:auto;width:40%">
-            <p class="w3-large w3-center">www.SuperiorNutritionX.com</p>
+            <p><strong>NUTRITION TRAINING QUIZ</strong></p>
+            <p>Answer the nutrition questions within the time limit.
+                Incorrect answers will penalize your score/time by ten seconds!
+            </p>
+
+            <button id="start">Start Quiz</button>
+
+            <div>
+                <br>
+                <hr class="w3-border-grey" style="margin:auto;width:40%">
+                <p class="w3-large w3-center">www.SuperiorNutritionX.com</p>
+            </div>
+
         </div>
+
+
+
+
         <div class="w3-display-bottomleft w3-padding-small">
             <a href="https://theprogresslab.com" target="_blank">Presented by<br>TheProgressLab.com<br> World Wide
                 Training. Personal Results.</a>
