--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
 <body>
     <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
-        <div class="w3-display-topleft w3-padding-large w3-small">
-            <strong>VIEWS HIGH SCORES</strong>
+        <div class="w3-display-topleft w3-padding-large w3-small" class="scores">
+            <a href="highscores.html"><strong>VIEWS HIGH SCORES</strong></a>
         </div>
+        <div class="w3-display-topright w3-padding-large w3-small" class="timer">Time: <span id="time">0</span></div>
         <div class="w3-display-middle">
             <h1 class="w3-jumbo w3-animate-top">SNX</h1>
             <p><strong>NUTRITION TRAINING QUIZ</strong></p>
