--- a/index.html
+++ b/index.html
@@ -12,26 +12,36 @@
 
 <body>
     <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+
         <div class="w3-display-topleft w3-padding-large w3-small" class="scores">
             <a href="highscores.html"><strong>VIEWS HIGH SCORES</strong></a>
         </div>
-        <div class="w3-display-topright w3-padding-large w3-small" class="timer">Time: <span id="time">0</span></div>
+        <div class="w3-display-topright w3-padding-large w3-small" class="timer"><strong>TIME:</strong> <span
+                id="time">0</span>
+        </div>
+
+
+
         <div class="w3-display-middle">
             <h1 class="w3-jumbo w3-animate-top">SNX</h1>
             <p><strong>NUTRITION TRAINING QUIZ</strong></p>
             <p>Answer the nutrition questions within the time limit.
                 Incorrect answers will penalize your score/time by ten seconds!
             </p>
-
-            <button id="start">Start Quiz</button>
-
-            <div>
-                <br>
-                <hr class="w3-border-grey" style="margin:auto;width:40%">
-                <p class="w3-large w3-center">www.SuperiorNutritionX.com</p>
+            <div class="w3-center">
+                <button id="start">Start Quiz</button>
             </div>
 
+            <br>
+            <hr class="w3-border-grey" style="margin:auto;width:40%">
+            <p class="w3-large w3-center">www.SuperiorNutritionX.com</p>
         </div>
+
+
+        <div>
+        </div>
+
+
 
 
 
@@ -40,6 +50,8 @@
             <a href="https://theprogresslab.com" target="_blank">Presented by<br>TheProgressLab.com<br> World Wide
                 Training. Personal Results.</a>
         </div>
+
+
     </div>
 
 </body>
