updated questionaire.js from UPenn LPS Coding Questions to SNX Nutrition Quiz Questions, added js files to README, fixed placement bug in index.html where www.SuperNutritionX.com kept floating to the top

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="w3-display-topleft w3-padding-large w3-small" class="scores">
             <a href="highscores.html"><strong>VIEWS HIGH SCORES</strong></a>
         </div>
-        <div class="w3-display-topright w3-padding-large w3-small" class="timer"><strong>TIME:</strong> <span
-                id="time">0</span>
+        <div class="w3-display-topright w3-padding-large w3-small" class="timer">TIME:
+            <span id="time">0</span>
         </div>
 
 
