added class container and margins to question-title, choices, and final score to improve frontend display

--- a/index.html
+++ b/index.html
@@ -21,67 +21,61 @@
             <span id="time">0</span>
         </div>
 
-
+        <br><br><br><br><br>
         <div class="wrapper">
 
-            <div id="start-screen" class="start">
-                <div class="w3-display-middle">
-                    <h1 class="w3-jumbo w3-animate-top">SNX</h1>
-                    <p><strong>NUTRITION TRAINING QUIZ</strong></p>
-                    <p>Answer the nutrition questions within the time limit.
-                        Incorrect answers will penalize your score/time by ten seconds!
-                    </p>
-                    <div class="w3-center">
-                        <button id="start">Start Quiz</button>
-                    </div>
-                    <br>
-                    <hr class="w3-border-grey" style="margin:auto;width:40%">
-                    <p class="w3-large w3-center">www.SuperiorNutritionX.com</p>
-
-                </div>
-
-                <!-- Basic index.html frame code above-->
-
-                <!-- Begins Question hide code below-->
-                <div id="questions" class="hide">
-                    <h2 id="question-title"></h2>
-                    <div id="choices" class="choices"></div>
-                </div>
-
-                <div id="end-screen" class="hide">
-                    <h2>All done!</h2>
-                    <p>Your final score is <span id="final-score"></span>.</p>
-                    <p>
-                        Enter initials: <input type="text" id="initials" max="3" />
-                        <button id="submit">Submit</button>
-                    </p>
-                </div>
 
 
-                <div id="feedback" class="feedback hide"></div>
-
-                <!-- Ends Questions hide code above-->
-
-                <!-- Basic index.html frame code below, leave in the start-screen div below-->
-
-            </div> <!-- start-screen end div here-->
-
-
-
-
-
-
-            <!--Footer-->
-            <div class="w3-display-bottomleft w3-padding-small">
-                <a href="https://theprogresslab.com" target="_blank">
-                    Presented by<br>TheProgressLab.com<br> World Wide
-                    Training. Personal Results.
-                </a>
-            </div>
-            <!-- End Footer -->
-
+            <h1 class="w3-jumbo w3-animate-top w3-center">SNX</h1>
         </div>
-        <!--wrapper div close-->
+
+        <div id="start-screen" class="start">
+            <p><strong>NUTRITION TRAINING QUIZ</strong></p>
+            <p>Answer the nutrition questions within the time limit.<br>
+                Incorrect answers will penalize your score/time by ten seconds!
+            </p>
+
+            <button id="start">Start Quiz</button>
+        </div>
+
+        <div id="questions" class="hide">
+            <h2 id="question-title"></h2>
+            <div id="choices" class="choices"></div>
+        </div>
+
+        <div id="end-screen" class="hide">
+            <h2>All done!</h2>
+            <p>Your final score is <span id="final-score"></span>""."</p>
+            <p>
+                Enter initials: <input type="text" id="initials" max="3" />
+                <button id="submit">Submit</button>
+            </p>
+        </div>
+
+
+        <div id="feedback" class="feedback hide"></div>
+
+        <!-- Ends Questions hide code above-->
+
+        <!-- Basic index.html frame code below, leave in the start-screen div below-->
+
+
+
+
+
+
+
+        <!--Footer-->
+        <div class="w3-display-bottomleft w3-padding-small">
+            <a href="https://theprogresslab.com" target="_blank">
+                Presented by<br>TheProgressLab.com<br> World Wide
+                Training. Personal Results.
+            </a>
+        </div>
+        <!-- End Footer -->
+
+    </div>
+    <!--wrapper div close-->
     </div>
     <!--background div close-->
 
