README updated with quiz features and project notes

--- a/index.html
+++ b/index.html
@@ -38,26 +38,24 @@
             <button id="start">Start Quiz</button>
         </div>
 
-        <div id="questions" class="hide">
-            <h2 id="question-title"></h2>
-            <div id="choices" class="choices"></div>
-        </div>
+        <div class="w3-container w3-margin">
+            <div id="questions" class="hide">
+                <h2 id="question-title"></h2>
+                <div id="choices" class="choices"></div>
+            </div>
 
-        <div id="end-screen" class="hide">
-            <h2>All done!</h2>
-            <p>Your final score is <span id="final-score"></span>""."</p>
-            <p>
-                Enter initials: <input type="text" id="initials" max="3" />
-                <button id="submit">Submit</button>
-            </p>
+            <div id="end-screen" class="hide">
+                <h2>All done!</h2>
+                <p>Your final score is <span id="final-score"></span>.</p>
+                <p>
+                    Enter initials: <input type="text" id="initials" max="3" />
+                    <button id="submit">Submit</button>
+                </p>
+            </div>
         </div>
-
 
         <div id="feedback" class="feedback hide"></div>
 
-        <!-- Ends Questions hide code above-->
-
-        <!-- Basic index.html frame code below, leave in the start-screen div below-->
 
 
 
