added spacing in index.html so that quiz questions are has space away from footer on mobile devices specifically Apple devices

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <span id="time">0</span>
         </div>
 
-        <br><br><br><br><br>
+        <br><br><br>
         <div class="wrapper">
 
 
@@ -54,7 +54,7 @@
             </div>
         </div>
 
-        <div id="feedback" class="feedback hide"></div>
+        <div id="feedback" class="feedback hide"></div><br><br><br><br>
 
 
 
