--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
             </div>
         </div>
 
-        <div id="feedback" class="feedback hide"></div><br><br><br><br>
+        <div id="feedback" class="feedback hide"></div>
+        <br><br><br><br>
+        <br><br><br><br>
 
 
 
